# agentic_classification

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  pytest.ini
backend/agents/: common.py  llm_factory.py  state.py  utils.py
backend/agents/classify_items/: classify_items_graph.py
backend/agents/classify_items/subgraphs/: classify_an_item.py
backend/agents/create_initial_nodes/: create_initial_nodes_graph.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  classification.py  items.py  nodes.py  taxonomies.py  users.py  websocket.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  serializers.py
backend/app/models/: item.py  node.py  object_id.py  taxonomy.py  user.py
backend/app/schemas/: auth.py  classification.py  item.py  node.py  taxonomy.py  user.py
backend/app/services/: classifier_service.py  dspy_optimizer.py  testing_dspy.ipynb
backend/app/services/compiled_dspy_modules/: 20250805_094318.json  20250805_095428.json  20250808_091437.json
backend/app/websocket/: manager.py
backend/sample_data/: preprocess_sample_data.ipynb  sample_data.pkl
backend/tests/: README.md  conftest.py  test_auth.py  test_classification.py  test_items.py  test_nodes.py  test_taxonomies.py  test_users.py
backend/tests/notebooks/: test_structured_output.ipynb
frontend/: README.md  README_AUTH.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts  utils.ts  (+1 more)
(+20 files in other folders)
